--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
+cmake_minimum_required(VERSION 3.22)
 project(nigiri)
-cmake_minimum_required(VERSION 3.23)
 
 include(cmake/pkg.cmake)
 
@@ -11,10 +11,10 @@ target_include_directories(
   PUBLIC include/public
   PUBLIC include/private
 )
-target_link_libraries(nigiri PUBLIC cista geo utl lmdb fmt)
+target_link_libraries(nigiri PUBLIC cista geo utl lmdb fmt date)
 target_compile_features(nigiri PUBLIC cxx_std_20)
 
 # --- TEST ---
 file(GLOB_RECURSE nigiri-test-files test/*.cc)
 add_executable(nigiri-test ${nigiri-test-files})
-target_link_libraries(nigiri-test nigiri doctest)
+target_link_libraries(nigiri-test nigiri doctest ianatzdb-res)
