--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,12 +68,10 @@ jobs:
           key: deps-${{ hashFiles('.pkg') }}
           restore-keys: deps-
 
+      - uses: ilammy/msvc-dev-cmd@v1
+
       - name: Build
         run: |
-          $devShell = &"${env:ProgramFiles(x86)}\Microsoft Visual Studio\Installer\vswhere.exe" -latest -find **\Microsoft.VisualStudio.DevShell.dll
-          $installPath = &"${env:ProgramFiles(x86)}\Microsoft Visual Studio\Installer\vswhere.exe" -latest -property installationpath
-          Import-Module $devShell
-          Enter-VsDevShell -VsInstallPath $installPath -SkipAutomaticLocation -DevCmdArguments "-arch=amd64"
           cmake `
             -GNinja -S . -B build `
             -DCMAKE_BUILD_TYPE=${{ matrix.config.mode }}
@@ -94,7 +92,6 @@ jobs:
       matrix:
         config:
           - preset: macos-x86_64
-          - preset: macos-x86_64-noavx2
           - preset: macos-arm64
     env:
       BUILDCACHE_COMPRESS: true
@@ -151,10 +148,8 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          - preset: linux-amd64-avx2-release
+          - preset: linux-amd64-release
             artifact: linux-amd64
-          - preset: linux-amd64-noavx-release
-            artifact: linux-amd64-noavx
           - preset: linux-x86-release
             artifact: linux-x86
           - preset: linux-arm-release
@@ -166,7 +161,7 @@ jobs:
           - preset: clang-tidy
           - preset: linux-sanitizer
           - preset: linux-debug
-            emulator: valgrind
+            emulator: valgrind --error-exitcode=1
     env:
       BUILDCACHE_DIR: /buildcache
       BUILDCACHE_DIRECT_MODE: true
