--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
         -Wno-c99-designator
         -Wno-zero-as-null-pointer-constant
         -Wno-missing-noreturn
+        -Wno-undefined-func-template
         -Werror)
 elseif(MSVC)
   set(nigiri-compile-options /WX)
