--- a/.clang-tidy.in
+++ b/.clang-tidy.in
@@ -70,7 +70,11 @@ Checks: "*,\
 -google-readability-avoid-underscore-in-googletest-name,\
 -readability-function-cognitive-complexity,\
 -readability-avoid-const-params-in-decls,\
--altera-struct-pack-align"
+-altera-struct-pack-align,\
+-hicpp-uppercase-literal-suffix,\
+-bugprone-unchecked-optional-access,\
+-readability-uppercase-literal-suffix,\
+-cppcoreguidelines-avoid-const-or-ref-data-members"
 WarningsAsErrors: '*'
 HeaderFilterRegex: '^${RELATIVE_SOURCE_DIR}(base|modules|test)/'
 AnalyzeTemporaryDtors: false
