--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -171,7 +171,7 @@ jobs:
           - preset: clang-tidy
           - preset: linux-sanitizer
           - preset: linux-debug
-            emulator: valgrind --error-exitcode=1
+            emulator: valgrind --leak-check=full --error-exitcode=1
     env:
       BUILDCACHE_DIR: /buildcache
       BUILDCACHE_DIRECT_MODE: true
