--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,24 @@ project(nigiri)
 include(cmake/buildcache.cmake)
 include(cmake/pkg.cmake)
 
+
+# --- GTFS-RT PROTOBUF ---
+add_custom_command(
+    OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/generated/gtfsrt/gtfs-realtime.pb.h
+    OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/generated/gtfsrt/gtfs-realtime.pb.cc
+    COMMAND ${CMAKE_CROSSCOMPILING_EMULATOR} $<TARGET_FILE:protoc>
+    --cpp_out=${CMAKE_CURRENT_BINARY_DIR}/generated/gtfsrt
+    --proto_path=${CMAKE_CURRENT_SOURCE_DIR}
+    ${CMAKE_CURRENT_SOURCE_DIR}/gtfs-realtime.proto
+    DEPENDS protoc
+    DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/gtfs-realtime.proto
+    COMMENT "Generating GTFS RT protocol buffers C++ code"
+)
+add_library(gtfsrt ${CMAKE_CURRENT_BINARY_DIR}/generated/gtfsrt/gtfs-realtime.pb.cc)
+target_include_directories(gtfsrt SYSTEM PUBLIC ${CMAKE_CURRENT_BINARY_DIR}/generated)
+target_link_libraries(gtfsrt protobuf::libprotobuf)
+
+
 option(NIGIRI_LINT "Run clang-tidy with the compiler." OFF)
 if(NIGIRI_LINT)
   # clang-tidy will be run on all targets defined hereafter
@@ -43,25 +61,11 @@ else()
         -Werror)
 endif()
 
-# --- GTFS-RT PROTOBUF ---
-add_custom_command(
-  OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/gtfsrt/gtfs-realtime.pb.h
-  OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/gtfsrt/gtfs-realtime.pb.cc
-  COMMAND ${CMAKE_CROSSCOMPILING_EMULATOR} $<TARGET_FILE:protoc>
-    --cpp_out=${CMAKE_CURRENT_BINARY_DIR}/gtfsrt
-    --proto_path=${CMAKE_CURRENT_SOURCE_DIR}
-    ${CMAKE_CURRENT_SOURCE_DIR}/gtfs-realtime.proto
-  DEPENDS protoc
-  DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/gtfs-realtime.proto
-  COMMENT "Generating GTFS RT protocol buffers C++ code"
-)
-
 # --- LIB ---
 file(GLOB_RECURSE nigiri-files src/*.cc)
-add_library(nigiri ${nigiri-files} ${CMAKE_CURRENT_BINARY_DIR}/gtfsrt/gtfs-realtime.pb.cc)
+add_library(nigiri ${nigiri-files})
 target_include_directories(nigiri PUBLIC include)
-target_include_directories(nigiri SYSTEM PUBLIC ${CMAKE_CURRENT_BINARY_DIR}/gtfsrt)
-target_link_libraries(nigiri PUBLIC cista geo utl fmt date miniz date-tz wyhash unordered_dense protobuf::libprotobuf)
+target_link_libraries(nigiri PUBLIC cista geo utl fmt date miniz date-tz wyhash unordered_dense gtfsrt)
 target_compile_features(nigiri PUBLIC cxx_std_20)
 target_compile_options(nigiri PRIVATE ${nigiri-compile-options})
 
