--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,14 @@
 cmake_minimum_required(VERSION 3.22)
 project(nigiri)
 
+if(NOT DEFINED CMAKE_MSVC_RUNTIME_LIBRARY)
+  if(NIGIRI_MIMALLOC)
+    set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>DLL")
+  else()
+    set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
+  endif()
+endif()
+
 include(cmake/buildcache.cmake)
 include(cmake/pkg.cmake)
 
