--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,11 +63,13 @@ if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
 elseif(MSVC)
   set(nigiri-compile-options /WX)
 else()
-  set(nigiri-compile-options ${SORO_COMPILE_OPTIONS}
+  set(nigiri-compile-options
         -Wall
         -Wextra
-        -Werror
         -Wno-maybe-uninitialized)
+  if (NOT CMAKE_CROSSCOMPILING)
+    set(nigiri-compile-options ${nigiri-compile-options} -Werror)
+  endif()
 endif()
 
 
