--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,6 +59,7 @@ if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
         -Wno-undefined-func-template
         -Wno-unsafe-buffer-usage
         -Wno-c++20-compat
+        -Wno-ctad-maybe-unsupported
         -Werror)
 elseif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "AppleClang")
   set(nigiri-compile-options -Wall -Wextra -Werror)
