wip: adding support for parsing SiteFrame, and partially ServiceFrame

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,13 @@
 cmake_minimum_required(VERSION 3.22)
 project(nigiri)
 
-if(NOT DEFINED CMAKE_MSVC_RUNTIME_LIBRARY)
-  if(NIGIRI_MIMALLOC)
-    set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>DLL")
-  else()
-    set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
-  endif()
-endif()
+if (NOT DEFINED CMAKE_MSVC_RUNTIME_LIBRARY)
+    if (NIGIRI_MIMALLOC)
+        set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>DLL")
+    else ()
+        set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
+    endif ()
+endif ()
 
 include(cmake/buildcache.cmake)
 include(cmake/pkg.cmake)
@@ -15,17 +15,22 @@ include(cmake/pkg.cmake)
 
 # --- GTFS-RT PROTOBUF ---
 add_custom_command(
-    OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/generated/gtfsrt/gtfs-realtime.pb.h
-    OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/generated/gtfsrt/gtfs-realtime.pb.cc
-    COMMAND ${CMAKE_CROSSCOMPILING_EMULATOR} $<TARGET_FILE:protoc>
-    --cpp_out=${CMAKE_CURRENT_BINARY_DIR}/generated/gtfsrt
-    --proto_path=${CMAKE_CURRENT_SOURCE_DIR}
-    ${CMAKE_CURRENT_SOURCE_DIR}/gtfs-realtime.proto
-    DEPENDS protoc
-    DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/gtfs-realtime.proto
-    COMMENT "Generating GTFS RT protocol buffers C++ code"
+        OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/generated/gtfsrt/gtfs-realtime.pb.h
+        OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/generated/gtfsrt/gtfs-realtime.pb.cc
+        COMMAND ${CMAKE_CROSSCOMPILING_EMULATOR} $<TARGET_FILE:protoc>
+        --cpp_out=${CMAKE_CURRENT_BINARY_DIR}/generated/gtfsrt
+        --proto_path=${CMAKE_CURRENT_SOURCE_DIR}
+        ${CMAKE_CURRENT_SOURCE_DIR}/gtfs-realtime.proto
+        DEPENDS protoc
+        DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/gtfs-realtime.proto
+        COMMENT "Generating GTFS RT protocol buffers C++ code"
 )
-add_library(gtfsrt ${CMAKE_CURRENT_BINARY_DIR}/generated/gtfsrt/gtfs-realtime.pb.cc)
+add_library(gtfsrt ${CMAKE_CURRENT_BINARY_DIR}/generated/gtfsrt/gtfs-realtime.pb.cc
+        include/nigiri/loader/netex/stop_place.h
+        include/nigiri/loader/netex/line.h
+        include/nigiri/loader/netex/service_journey_pattern.h
+        include/nigiri/loader/netex/scheduled_stop_point.h
+        include/nigiri/loader/netex/service_journey.h)
 target_compile_features(gtfsrt PUBLIC cxx_std_23)
 target_include_directories(gtfsrt SYSTEM PUBLIC ${CMAKE_CURRENT_BINARY_DIR}/generated)
 target_link_libraries(gtfsrt protobuf)
@@ -33,51 +38,56 @@ target_link_libraries(gtfsrt protobuf)
 
 # --- LINT ---
 option(NIGIRI_LINT "Run clang-tidy with the compiler." OFF)
-if(NIGIRI_LINT)
-  # clang-tidy will be run on all targets defined hereafter
-  include(cmake/clang-tidy.cmake)
-endif()
+if (NIGIRI_LINT)
+    # clang-tidy will be run on all targets defined hereafter
+    include(cmake/clang-tidy.cmake)
+endif ()
 
 if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
-  set(nigiri-compile-options
-        -Weverything
-        -Wno-c++98-compat
-        -Wno-c++98-compat-pedantic
-        -Wno-newline-eof
-        -Wno-missing-prototypes
-        -Wno-padded
-        -Wno-double-promotion
-        -Wno-undef
-        -Wno-undefined-reinterpret-cast
-        -Wno-float-conversion
-        -Wno-global-constructors
-        -Wno-exit-time-destructors
-        -Wno-switch-enum
-        -Wno-c99-designator
-        -Wno-zero-as-null-pointer-constant
-        -Wno-missing-noreturn
-        -Wno-undefined-func-template
-        -Wno-unsafe-buffer-usage
-        -Wno-c++20-compat
-        -Werror)
-elseif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "AppleClang")
-  set(nigiri-compile-options -Wall -Wextra -Werror)
-elseif(MSVC)
-  set(nigiri-compile-options /WX)
-else()
-  set(nigiri-compile-options
-        -Wall
-        -Wextra
-        -Wno-maybe-uninitialized)
-  if (NOT CMAKE_CROSSCOMPILING)
-    set(nigiri-compile-options ${nigiri-compile-options} -Werror)
-  endif()
-endif()
+    set(nigiri-compile-options
+            -Weverything
+            -Wno-c++98-compat
+            -Wno-c++98-compat-pedantic
+            -Wno-newline-eof
+            -Wno-missing-prototypes
+            -Wno-padded
+            -Wno-double-promotion
+            -Wno-undef
+            -Wno-undefined-reinterpret-cast
+            -Wno-float-conversion
+            -Wno-global-constructors
+            -Wno-exit-time-destructors
+            -Wno-switch-enum
+            -Wno-c99-designator
+            -Wno-zero-as-null-pointer-constant
+            -Wno-missing-noreturn
+            -Wno-undefined-func-template
+            -Wno-unsafe-buffer-usage
+            -Wno-c++20-compat
+            -Werror)
+elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "AppleClang")
+    set(nigiri-compile-options -Wall -Wextra -Werror)
+elseif (MSVC)
+    set(nigiri-compile-options /WX)
+else ()
+    set(nigiri-compile-options
+            -Wall
+            -Wextra
+            -Wno-maybe-uninitialized)
+    if (NOT CMAKE_CROSSCOMPILING)
+        set(nigiri-compile-options ${nigiri-compile-options} -Werror)
+    endif ()
+endif ()
 
 
 # --- LIB ---
 file(GLOB_RECURSE nigiri-files src/*.cc)
-add_library(nigiri ${nigiri-files})
+add_library(nigiri ${nigiri-files}
+        src/loader/netex/stop_place.cc
+        src/loader/netex/line.cc
+        src/loader/netex/scheduled_stop_point.cc
+        src/loader/netex/service_journey_pattern.cc
+        src/loader/netex/service_journey.cc)
 target_include_directories(nigiri PUBLIC include)
 target_link_libraries(nigiri PUBLIC cista geo utl fmt date miniz date-tz wyhash unordered_dense gtfsrt pugixml)
 target_compile_features(nigiri PUBLIC cxx_std_23)
@@ -94,11 +104,15 @@ target_compile_features(nigiri-server PUBLIC cxx_std_23)
 # --- TEST ---
 add_library(nigiri-generated INTERFACE)
 target_include_directories(nigiri-generated INTERFACE ${CMAKE_CURRENT_BINARY_DIR}/generated)
-configure_file (
-  ${CMAKE_CURRENT_SOURCE_DIR}/test/test_dir.h.in
-  ${CMAKE_CURRENT_BINARY_DIR}/generated/test_dir.h
+configure_file(
+        ${CMAKE_CURRENT_SOURCE_DIR}/test/test_dir.h.in
+        ${CMAKE_CURRENT_BINARY_DIR}/generated/test_dir.h
 )
 file(GLOB_RECURSE nigiri-test-files test/*.cc)
-add_executable(nigiri-test ${nigiri-test-files})
+add_executable(nigiri-test ${nigiri-test-files}
+        test/loader/netex/resource_frame_test.cc
+        test/loader/netex/stop_place_test.cc
+        test/loader/netex/service_journey_pattern_test.cc
+)
 target_link_libraries(nigiri-test nigiri gtest ianatzdb-res nigiri-generated)
 target_compile_options(nigiri-test PRIVATE ${nigiri-compile-options})
