--- a/.clang-tidy.in
+++ b/.clang-tidy.in
@@ -79,7 +79,8 @@ Checks: "*,\
 -cert-dcl37-c,\
 -bugprone-reserved-identifier,\
 -cert-dcl51-cpp,\
--misc-confusable-identifiers"
+-misc-confusable-identifiers,\
+-cppcoreguidelines-avoid-do-while"
 WarningsAsErrors: '*'
 HeaderFilterRegex: '^${RELATIVE_SOURCE_DIR}(base|modules|test)/'
 AnalyzeTemporaryDtors: false
