--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -100,7 +100,7 @@ target_link_libraries(nigiri-import PRIVATE nigiri boost-program_options)
 target_compile_features(nigiri-import PUBLIC cxx_std_23)
 
 # --- BENCHMARK ---
-file(GLOB_RECURSE nigiri-benchmark-files benchmark/main.cc)
+file(GLOB_RECURSE nigiri-benchmark-files exe/benchmark.cc)
 add_executable(nigiri-benchmark ${nigiri-benchmark-files})
 target_link_libraries(nigiri-benchmark PRIVATE nigiri boost-program_options)
 target_compile_features(nigiri-benchmark PUBLIC cxx_std_23)
