--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,9 @@ on:
     types:
       - published
 
+env:
+  BUILD_TARGETS: nigiri-test nigiri-import nigiri-benchmark
+
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
@@ -84,7 +87,7 @@ jobs:
             -GNinja -S . -B build `
             -DCMAKE_BUILD_TYPE=${{ matrix.config.mode }}
           .\build\buildcache\bin\buildcache.exe -z
-          cmake --build build --target nigiri-test nigiri-import
+          cmake --build build --target $BUILD_TARGETS
           $CompilerExitCode = $LastExitCode
           .\build\buildcache\bin\buildcache.exe -s
           exit $CompilerExitCode
@@ -150,7 +153,7 @@ jobs:
       - name: Build
         run: |
           ./build/buildcache/bin/buildcache -z
-          cmake --build build --target nigiri-test nigiri-import
+          cmake --build build --target $BUILD_TARGETS
           ./build/buildcache/bin/buildcache -s
 
       # ==== TESTS ====
@@ -204,7 +207,7 @@ jobs:
       - name: Build
         run: |
           buildcache -z
-          cmake --build build --target nigiri-test nigiri-import
+          cmake --build build --target $BUILD_TARGETS
           buildcache -s
 
       # ==== TESTS ====
