--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,7 +87,7 @@ jobs:
             -GNinja -S . -B build `
             -DCMAKE_BUILD_TYPE=${{ matrix.config.mode }}
           .\build\buildcache\bin\buildcache.exe -z
-          cmake --build build --target $BUILD_TARGETS
+          cmake --build build --target $env:BUILD_TARGETS
           $CompilerExitCode = $LastExitCode
           .\build\buildcache\bin\buildcache.exe -s
           exit $CompilerExitCode
