--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,9 +9,6 @@ on:
     types:
       - published
 
-env:
-  BUILD_TARGETS: nigiri-test nigiri-import nigiri-benchmark
-
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
@@ -87,7 +84,7 @@ jobs:
             -GNinja -S . -B build `
             -DCMAKE_BUILD_TYPE=${{ matrix.config.mode }}
           .\build\buildcache\bin\buildcache.exe -z
-          cmake --build build --target $env:BUILD_TARGETS
+          cmake --build build --target nigiri-test nigiri-import nigiri-benchmark
           $CompilerExitCode = $LastExitCode
           .\build\buildcache\bin\buildcache.exe -s
           exit $CompilerExitCode
@@ -153,7 +150,7 @@ jobs:
       - name: Build
         run: |
           ./build/buildcache/bin/buildcache -z
-          cmake --build build --target $BUILD_TARGETS
+          cmake --build build --target nigiri-test nigiri-import nigiri-benchmark
           ./build/buildcache/bin/buildcache -s
 
       # ==== TESTS ====
@@ -207,7 +204,7 @@ jobs:
       - name: Build
         run: |
           buildcache -z
-          cmake --build build --target $BUILD_TARGETS
+          cmake --build build --target nigiri-test nigiri-import nigiri-benchmark
           buildcache -s
 
       # ==== TESTS ====
