--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -119,12 +119,16 @@ target_compile_features(mapper PUBLIC cxx_std_23)
 
 add_executable(map-writer dev/writer.cc)
 target_include_directories(map-writer PUBLIC dev)
-target_link_libraries(map-writer PUBLIC cista)
+target_link_libraries(map-writer PUBLIC cista utl)
 target_link_options(map-writer PRIVATE -static)
 target_compile_options(map-writer PUBLIC ${nigiri-compile-options})
+#target_link_options(map-writer PRIVATE -fsanitize=address)
+#target_compile_options(map-writer PUBLIC ${nigiri-compile-options} -g -fsanitize=address)
 target_compile_features(map-writer PUBLIC cxx_std_23)
 
-add_executable(map-reader dev/writer.cc)
-target_link_libraries(map-reader PUBLIC cista)
+add_executable(map-reader dev/reader.cc)
+target_include_directories(map-reader PUBLIC dev)
+target_link_libraries(map-reader PUBLIC cista utl)
+target_link_options(map-reader PRIVATE -static)
 target_compile_options(map-reader PUBLIC ${nigiri-compile-options})
 target_compile_features(map-reader PUBLIC cxx_std_23)
